<resources>
    <string name="app_name">魔塔</string>
    <string name="main_name">魔塔</string>
    <string name="action_settings">Settings</string>
    <string name="start">新的开始</string>
    <string name="countinue">继续游戏</string>
    <string name="end">退出游戏</string>
    <string name="up">上</string>
    <string name="down">下</string>
    <string name="left">左</string>
    <string name="right">右</string>

    <string name="hp">血量:</string>
    <string name="init_hp">200</string>
    <string name="exp">经验: </string>
    <string name="gold">金币: </string>
    <string name="attack">攻击: </string>
    <string name="init_attack">5</string>
    <string name="defense">防御: </string>
    <string name="init_defense">5</string>
    <string name="level">等级: </string>
    <string name="init_level">1</string>
    <string name="init_data">0</string>

    <string name="copper_key">铜钥匙:</string>
    <string name="silver_key">银钥匙:</string>
    <string name="gold_key">金钥匙:</string>


</resources>
