<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/start_page_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:backgroundTintMode="screen"
    android:background="@drawable/beijing">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/mian_page_title"
            android:text="@string/main_name"/>
    </LinearLayout>

    <LinearLayout
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="50dp">
        <Button
            android:id="@+id/begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            />
        <Button
            android:id="@+id/countinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/countinue"
            />
        <Button
            android:id="@+id/end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            />
    </LinearLayout>

</RelativeLayout>